testsuite/poke.pkl/mod-f32-diag-1.pk
/* { dg-do compile } */

var res
  = 11L .% 1; /* { dg-error "invalid operand .*" } */
